2018-01-04  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.2-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.2-alpha01: Orphan Black';git push
	git tag -a 4.7.2-alpha01 -m 'Orphan Black: Functionally equivalent to Ajudar (4.7.1)';git push --tags

	* Update copyright year to 2018, and version tags

	* Update rationale and effects for --trd/--cdl defaults in nco.texi

	* Pedro implemented CMake improvements and flexibility for Windows builds

2017-12-21  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.1 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.1: Ajudar';git push
	git tag -a 4.7.1 -m 'WIN64 ABI; Conda Windows; JSON tweaks; fix clm_md=dly,ann;';git push --tags

2017-12-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.1-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.1-beta01: Neverwhere';git push
	git tag -a 4.7.1-beta01 -m 'JSON NUL, brackets, Conda Windows';git push --tags

	* Fix Travis build matrix to eliminate false negatives (thanks to @isuruf)

	* Print scalar char of NUL as "" instead of 0 in JSON, CDL, XML

	* Remove inner set of brackets when printing character arrays in JSON

2017-12-18  Charlie Zender  <zender@uci.edu>

	* Add detection of netcdf_mem.h to autoconf and #define	HAVE_NETCDF_MEM_H accordingly

2017-12-16  Charlie Zender  <zender@uci.edu>

	* Add AppVeyor to build conda recipe for Windows. Contributed by Filipe.

2017-12-14  Charlie Zender  <zender@uci.edu>

	* CMakefile.txt and nco_sng_utl.h changes for Conda Windows package

2017-12-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.1-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.1-alpha03: Red Velvet';git push
	git tag -a 4.7.1-alpha03 -m 'ncclimo fix clm_md=dly,ann bugs and add prepend savvy';git push --tags

	* ncclimo: for clm_md=dly and inp_std, prepend drc_in to fl_in iff stdin names are basenames

2017-12-07  Charlie Zender  <zender@uci.edu>

	* Stop ncclimo from setting csn_flg when clm_md='dly' or 'ann'
