@@ -1,3 +1,7 @@
+2018-01-09  Charlie Zender  <zender@uci.edu>
+
+	* Print offending var/dim/group name when nco_rename_* returns NC_ENAMEINUSE
+
 2018-01-04  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.7.2-alpha01 release procedure:
